@@ -77,7 +77,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
 
 ### A. 指標服務（`backend/src/main/java/com/steven/assets/service/TechnicalIndicatorService.java`）
 
-- [ ] 280.1 新增 public 巢狀 record（DTO 一律 `record`）：
+- [x] 280.1 新增 public 巢狀 record（DTO 一律 `record`）：
 
   ```java
   /**
@@ -96,10 +96,10 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   }
   ```
 
-- [ ] 280.2 `FullIndicators` 新增**一個** component `ExtendedIndicators extended`，**加在最末**；`FullIndicators.EMPTY` 該欄填 `ExtendedIndicators.EMPTY`。
+- [x] 280.2 `FullIndicators` 新增**一個** component `ExtendedIndicators extended`，**加在最末**；`FullIndicators.EMPTY` 該欄填 `ExtendedIndicators.EMPTY`。
   **刻意不攤平成 14 個 component**：`FullIndicators` 有 8 個 positional 呼叫端（見現況重點），攤平要多寫 112 個引數；巢狀一個欄位讓每個呼叫端只多一個引數。t276 之後要接進 `StockInput` 時，`ind.extended().rsi5()` 一樣拿得到。
 
-- [ ] 280.3 新增 private 方法，對 desc 序列算出最新一期的 14 個值：
+- [x] 280.3 新增 private 方法，對 desc 序列算出最新一期的 14 個值：
 
   ```java
   /** desc 序列 → 最新一期的擴充指標；序列為 null／空時回 ExtendedIndicators.EMPTY。 */
@@ -113,7 +113,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - ⚠️ **不得新增任何第四套 KD／MA／MACD／RSI 遞迴**，也不得複製既有遞迴的內容。本方法只做「反轉序列 → 呼叫既有核心 → 取尾筆」。
   - ⚠️ **不得改動 `kdSeriesAsc`／`macdSeriesAsc`／`rsiSeriesAsc`／`biasRaw`／`maAt`／`scale2`／`simpleMa`／`stockKd`／`taiexKd`／`taiexSimpleMa`／`indicatorSeries` 的任何一行**——`computeAll()` 的對外數值（警示觸發門檻、觀察清單 KD 欄、Task 146 的 MA% 換算觸發價、走勢圖同源判準）全綁在上面。
 
-- [ ] 280.4 `computeFromSeries(series)`（`:147`）改為**單趟 `kdSeriesAsc`**，同時供 current KD／previous KD／extended 三者取值，再把 `extendedOf` 需要的其餘序列（MACD／RSI×2／BIAS×2）算完，填進 `new FullIndicators(...)` 的新欄。
+- [x] 280.4 `computeFromSeries(series)`（`:147`）改為**單趟 `kdSeriesAsc`**，同時供 current KD／previous KD／extended 三者取值，再把 `extendedOf` 需要的其餘序列（MACD／RSI×2／BIAS×2）算完，填進 `new FullIndicators(...)` 的新欄。
   - 由此，`RadarInputAssembler.assemble()`（`:107-109`）與 `computeAll()` 的一般個股路徑**自動**帶上擴充值，**兩支檔都不必改**。
   - **價基與 k/d 天然同源**：吃的就是同一個 `series` 參數，不是另一次取數。
   - **為什麼要合併成單趟（不是可有可無的優化）**：現況 `computeFromSeries` 已經跑**兩趟** `kdSeriesAsc`（`:155` 的 `stockKd(series)` 與 `:157` 的 `stockKd(series.subList(1, size))`，兩者各自在內部建整條序列）。若 `extendedOf` 再獨立跑第三趟，而 `kdSeriesAsc` 是本方法最貴的部分（每期一個 `subList` ＋ 兩個 9 元素 stream，`:324-328`），成本會明顯上升——**而 `computeFromSeries` 的最大宗呼叫端是 `BacktestService`**（`:238`／`:254-255` 與 `:547-552`：每檔標的 × 每個交易日各呼叫一次 `assembler.assemble(...)`，10 年史約 2,200 次／檔，再加大盤 regime 迴圈），`design.md` 對該端點的自述已是「分鐘級運算」。合併後由 3 趟降為 1 趟，本任務對該端點**淨持平或更快**。
@@ -125,7 +125,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - ⚠️ **`kdSeriesAsc` 本體的公式一個字都不能改**；本項只改「呼叫幾次、從哪一格取值」。
   - **`stockKd`（`:305-310`）在合併後成為死碼，一併刪除**：全樹只有 `:155`／`:157` 兩個呼叫端，都在 `computeFromSeries` 內（`grep -rn "stockKd(" backend/src` 僅三筆命中：兩個呼叫點＋定義本身）。刪掉後 `kdSeriesAsc` 成為 Task 261 所宣告的「全站股票 KD 唯一的遞迴」名副其實；留一支無呼叫端的 `private static` 只會讓下一個人以為還有第二條路徑。
 
-- [ ] 280.5 `computeAllForTaiex()`（`:466`）把**已含今日 live 合成列的那個 `desc` 變數**（即 `:485` 的 `desc.isEmpty()` guard 之後、`taiexSimpleMa()`／`taiexKd()` 吃的**同一個變數**）映射成 `List<StockPriceHistory>` 後呼叫 `extendedOf(...)`，填進 `:496` 的 `new FullIndicators(...)`。
+- [x] 280.5 `computeAllForTaiex()`（`:466`）把**已含今日 live 合成列的那個 `desc` 變數**（即 `:485` 的 `desc.isEmpty()` guard 之後、`taiexSimpleMa()`／`taiexKd()` 吃的**同一個變數**）映射成 `List<StockPriceHistory>` 後呼叫 `extendedOf(...)`，填進 `:496` 的 `new FullIndicators(...)`。
   - **映射抽成共用 private static helper**：`private static StockPriceHistory toRow(TwseIndexDailyHistory d, String code, String market)`（`closePrice←getClosePoint()`、`highPrice←getHighPoint()`、`lowPrice←getLowPoint()`），並讓 `taiexSeriesAsc()`（`:250-259`，內有同一組對應的 inline lambda）**改呼叫它**。
     理由：t276 的 276.2 要用 `volume` 做量價因子，屆時映射要多一個欄位；留兩份會漏一份而且不報錯。`taiexSeriesAsc` 不在 280.3 的「不得改動」清單內，改它只是把 lambda 換成方法呼叫、輸出完全相同。
   - ⚠️ **`core` 的 8 個既有欄位必須一個位元都不變**：仍由 `taiexSimpleMa()`／`taiexKd()` 對同一份 desc 清單算出。
@@ -133,9 +133,9 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - ⚠️ **映射不得只複製 `closePoint`**：`highPoint`／`lowPoint` 直接進 KD 的 RSV 分母與 MACD 的 DI 價基，漏掉會讓 `extended` 的 `rsv` 與 `core.k()` 對不上。舊資料 high/low 為 null 時由核心自行 fallback close（既有慣例，不需在映射層補值）。
   - ⚠️ **新增的計算必須留在既有的 `try` 內**，失敗仍回 `FullIndicators.EMPTY`。讓例外逸出會被 `TradingRadarService:243` 的 `catch` 接住 → `incompleteMarket(...)` → `regime=DATA_INCOMPLETE`、`stale=true`，而 `buildStock()` 收到 `DATA_INCOMPLETE` 後**全部個股買進閘門一律關閉**。把「指標暫時算不出來」放大成「今天整張雷達停發訊號」是絕不可接受的爆炸半徑。
 
-- [ ] 280.6 **視窗長度一律沿用各自路徑的既有值，不得延長也不得對齊**：個股 `min(size, liveAdded ? 241 : 240)`（`RadarInputAssembler`）、`computeAll` 一般路徑 240（+live）、大盤 240（+live）。MACD／RSI 雖是由序列最早一筆單向遞迴，既有視窗已足夠收斂——序列長 241 時 EMA26 的 SMA seed 落在 asc index 25、遞迴 215 步，殘留權重 `(1−2/27)^215 ≈ 6.5×10⁻⁸`；Wilder RSI10 的 seed 落在 index 10、遞迴 230 步，殘留 `0.9^230 ≈ 3×10⁻¹¹`；皆遠低於 2 位小數的捨入尺度 0.005，序列長 240 時各少一步、結論不變。**不得為新指標另開全史查詢**：那會讓同一列的 MA／KD 與 MACD／RSI 吃到不同長度的序列，且在雷達逐檔迴圈中放大成 N 次全史掃描。
+- [x] 280.6 **視窗長度一律沿用各自路徑的既有值，不得延長也不得對齊**：個股 `min(size, liveAdded ? 241 : 240)`（`RadarInputAssembler`）、`computeAll` 一般路徑 240（+live）、大盤 240（+live）。MACD／RSI 雖是由序列最早一筆單向遞迴，既有視窗已足夠收斂——序列長 241 時 EMA26 的 SMA seed 落在 asc index 25、遞迴 215 步，殘留權重 `(1−2/27)^215 ≈ 6.5×10⁻⁸`；Wilder RSI10 的 seed 落在 index 10、遞迴 230 步，殘留 `0.9^230 ≈ 3×10⁻¹¹`；皆遠低於 2 位小數的捨入尺度 0.005，序列長 240 時各少一步、結論不變。**不得為新指標另開全史查詢**：那會讓同一列的 MA／KD 與 MACD／RSI 吃到不同長度的序列，且在雷達逐檔迴圈中放大成 N 次全史掃描。
 
-- [ ] 280.7 **成本揭露與必要的實測**：`computeFromSeries` 淨變化為「**KD 遞迴 3 趟 → 1 趟**（280.4）」＋「新增 MACD 一趟、RSI 兩趟、BIAS 兩趟 `maAt`」，n ≤ 241。新增的三類每元素成本遠低於 `kdSeriesAsc`（後者每期一個 `subList` ＋ 兩個 stream），預期淨持平或更快。
+- [x] 280.7 **成本揭露與必要的實測**：`computeFromSeries` 淨變化為「**KD 遞迴 3 趟 → 1 趟**（280.4）」＋「新增 MACD 一趟、RSI 兩趟、BIAS 兩趟 `maAt`」，n ≤ 241。新增的三類每元素成本遠低於 `kdSeriesAsc`（後者每期一個 `subList` ＋ 兩個 stream），預期淨持平或更快。
   受影響的呼叫端有兩類，**兩類都要在完成報告中交代**：
   - **高頻**：`BacktestService`（`:238`／`:254-255` 與 `:547-552`，每檔標的 × 每個交易日一次，經 `RadarInputAssembler.assemble()` → `computeFromSeries`）。`/internal/backtest/rules` 已是分鐘級運算，**必須實測改動前後的 wall time**（見驗證段第 7 步），倍率 > 1.2 即視為未達 280.4 的設計目標，須回頭查是否真的只跑一趟 KD。
   - **低頻**：`computeAll()` 的呼叫端——觀察清單（`WatchStockService`，僅 controller 觸發、該 view 無 `setInterval`／`EventSource`）、警示觸發落地（`StockAlertService` 的 `recordTrigger` 路徑，在 `triggered && tradingDayNow` 之後才走）、資產 Excel 匯出。**均不在即時價 tick 路徑上**，多算不用的值可忽略。
@@ -143,7 +143,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
 
 ### B. DTO（`backend/src/main/java/com/steven/assets/dto/TradingRadarDto.java`）
 
-- [ ] 280.8 新增巢狀 record（**用 record，不得用 `@Data` 可變 class**）：
+- [x] 280.8 新增巢狀 record（**用 record，不得用 `@Data` 可變 class**）：
 
   ```java
   /**
@@ -165,23 +165,23 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
           BigDecimal wr9) {}
   ```
 
-- [ ] 280.9 `MarketSummary` 與 `StockDecision` 各新增**一個** component `ExtendedIndicators extendedIndicators`，**加在該 record 的最末**。
+- [x] 280.9 `MarketSummary` 與 `StockDecision` 各新增**一個** component `ExtendedIndicators extendedIndicators`，**加在該 record 的最末**。
   ⚠️ `RefreshResponse` 的既有 javadoc 寫「`Response` **不得為此新增欄位**」——那是指「不得為了手動重新整理這個功能而在 `Response` 上加欄位」；本任務加的是 `MarketSummary`／`StockDecision` 內部欄位、`Response` 本身的 5 個 component 不變，`GET` 與 `POST /refresh` 仍完全同形，不牴觸。
 
 ### C. 雷達服務（`backend/src/main/java/com/steven/assets/service/TradingRadarService.java`）
 
-- [ ] 280.10 新增 private static mapper `TradingRadarDto.ExtendedIndicators toDto(TechnicalIndicatorService.ExtendedIndicators e)`：`e == null` 回 `null`，否則逐欄搬 14 個值。
-- [ ] 280.11 `buildStock()` 成功路徑（`:323` 的 `new TradingRadarDto.StockDecision(...)`）最末欄填 `toDto(ind.extended())`；`incompleteStock()`（`:621`）該欄傳 `null`。
-- [ ] 280.12 `buildMarket()` 成功路徑（`:221` 的 `new TradingRadarDto.MarketSummary(...)`）最末欄填 `toDto(ind.extended())`；`incompleteMarket()`（`:601`）該欄傳 `null`。
+- [x] 280.10 新增 private static mapper `TradingRadarDto.ExtendedIndicators toDto(TechnicalIndicatorService.ExtendedIndicators e)`：`e == null` 回 `null`，否則逐欄搬 14 個值。
+- [x] 280.11 `buildStock()` 成功路徑（`:323` 的 `new TradingRadarDto.StockDecision(...)`）最末欄填 `toDto(ind.extended())`；`incompleteStock()`（`:621`）該欄傳 `null`。
+- [x] 280.12 `buildMarket()` 成功路徑（`:221` 的 `new TradingRadarDto.MarketSummary(...)`）最末欄填 `toDto(ind.extended())`；`incompleteMarket()`（`:601`）該欄傳 `null`。
   **`:206` 的 `indicatorService.computeAll(TAIEX_CODE, TW_MARKET)` 一字不改**——擴充值已在同一個 `FullIndicators` 裡。
-- [ ] 280.13 **`RadarInputAssembler.java` 與 `prepareTechnicalData()` 一行都不改。**
-- [ ] 280.14 **不得把擴充值餵進規則引擎**：`TradingRadarRuleEngine.StockInput`／`MarketInput` 的欄位數與內容一律不動；`RULE_VERSION` 維持現值**不升版**。
+- [x] 280.13 **`RadarInputAssembler.java` 與 `prepareTechnicalData()` 一行都不改。**
+- [x] 280.14 **不得把擴充值餵進規則引擎**：`TradingRadarRuleEngine.StockInput`／`MarketInput` 的欄位數與內容一律不動；`RULE_VERSION` 維持現值**不升版**。
   理由是「**規則集本身未變**」——不新增／不修改任何因子、權重或動作門檻，同一份輸入產生逐位相同的 `action`／`score`／`regime`／`reasons`／`risks`。
   ⚠️ **刻意不援引 Task 249 那條「同一份輸入前後產生完全相同的輸出」**：本任務的輸出結構確有變化（DTO 多一個巢狀欄位、匯出檔多 15 欄、快照雜湊必然改變），**不滿足**該條件。寫成「符合 Task 249」會把一條治理判準改寫掉，下一個任務會照著引用。
 
 ### D. 匯出（`backend/src/main/java/com/steven/assets/service/TradingRadarExportService.java`）
 
-- [ ] 280.15 新增巢狀取值 helper（不得改動既有四支 helper 的行為）：
+- [x] 280.15 新增巢狀取值 helper（不得改動既有四支 helper 的行為）：
 
   ```java
   /** 巢狀子節點的數值欄；父節點缺漏／為 null 時回 null（舊快照沒有 extendedIndicators）。 */
@@ -192,7 +192,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
 
   `JsonNode.path()` 對 MissingNode／NullNode 都回 MissingNode，故舊快照自然得到 `null` → Excel 空白格、JSON `null`。**不得補 0、`"-"` 或空字串。**
 
-- [ ] 280.16 `marketSheet()`：headers 由 20 → **35**，順序**逐字**如下（`週線MA5` 插在 `MA20` 前、14 欄插在 `D` 後）：
+- [x] 280.16 `marketSheet()`：headers 由 20 → **35**，順序**逐字**如下（`週線MA5` 插在 `MA20` 前、14 欄插在 `D` 後）：
 
   ```
   0  快照時間        1  regime        2  中文          3  分數
@@ -210,7 +210,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - `rows` 對應：index 11 → `num(m, "weeklyMa")`；index 19–32 → `num(m, "extendedIndicators", "j9"/"k3d2"/"rsv"/"ema12"/"ema26"/"dif"/"macd"/"osc"/"rsi5"/"rsi10"/"bias10"/"bias20"/"b10b20"/"wr9")`。
   - `formats`：新增的 15 欄全部 `ExportDoc.Format.NUM2`；既有欄的 Format 一個都不改。**現行 formats 是單行的 `List.of(...)`（`:141`），本任務一併改成比照 `stockSheet()` 的逐行 ＋ index 註解寫法**——20 → 35 欄後單行已無法目視對位，而 Task 264 的插欄事故正是三份清單靜默不同步。
 
-- [ ] 280.17 `stockSheet()`：headers 由 35 → **50**，順序**逐字**如下：
+- [x] 280.17 `stockSheet()`：headers 由 35 → **50**，順序**逐字**如下：
 
   ```
   0  快照時間   1  代碼      2  名稱      3  市場      4  資產類別
@@ -233,11 +233,11 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - **同檔另有兩處會失真的既有註解，必須一併更新**（它們是下一次插欄時唯一的目視對位依據）：`:171` 的「`// Task 264 的四欄（index 27–30）…`」改為 `index 42–45`；`:178` 的「`// 逐列對齊上面的 headers（35 欄）。`」改為 `50 欄`。
   - ⚠️ 三份清單（`headers`／`formats`／`rows` 的 `Arrays.asList(...)`）必須同步位移；`ExportDoc.Table` 只在 runtime 才擲長度不符。
 
-- [ ] 280.18 **「快照索引」分頁一欄都不動。**
+- [x] 280.18 **「快照索引」分頁一欄都不動。**
 
 ### E. 測試（與實作同一支任務，不得延後）
 
-- [ ] 280.19 `backend/src/test/java/com/steven/assets/service/TechnicalIndicatorSeriesAlignmentTest.java`（既有 Task 261／262 測試類，沿用其 `@ExtendWith(MockitoExtension.class)` ＋ `@Mock` ＋ AssertJ ＋繁體中文方法名）新增：
+- [x] 280.19 `backend/src/test/java/com/steven/assets/service/TechnicalIndicatorSeriesAlignmentTest.java`（既有 Task 261／262 測試類，沿用其 `@ExtendWith(MockitoExtension.class)` ＋ `@Mock` ＋ AssertJ ＋繁體中文方法名）新增：
   - **`extended` 與同一份 `FullIndicators` 的 k／d 自洽**：對固定 fixture（≥ 250 筆、含 high/low 為 null 的列）呼叫 `computeFromSeries(...)`，斷言 `3×d − 2×k` 與 `extended().j9()` 差 ≤ `0.03`、`3×k − 2×d` 與 `k3d2()` 差 ≤ `0.03`、`100 − extended().rsv()` 與 `wr9()` **精確相等**。
     ⚠️ **容差不可寫 0.01**：`kdSeriesAsc` 以**未捨入**的 k／d 算 j9／k3d2、三者各自 `setScale(2, HALF_UP)`，上界為 `0.005 + 3×0.005 + 2×0.005 = 0.03`；寫 0.01 會產生**必然的**假失敗。
   - **`computeFromSeries().extended()` 與 `indicatorSeries()` 尾筆逐位相同（同一份輸入時）**：stub `historyRepo.findByStockCodeAndMarketAndTradingDateBetweenOrderByTradingDateAsc(...)` 回一份 asc 序列、`end` 早於今日（`stockSeriesAsc` 於 `end.isBefore(today)` 時直接 return，不併 live），斷言 `indicatorSeries(...)` 尾筆的 14 個欄位 == `computeFromSeries(同一份 desc)` 的 `extended()` 對應欄位。證明沒有長出第二套公式。
@@ -256,11 +256,11 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
   - **空／不足序列**：`computeFromSeries(List.of())` 回 `FullIndicators.EMPTY`（既有行為）；序列僅 3 筆時 `extended()` 的 14 個欄位全為 `null`、不擲例外。
   - Mockito 在本專案的 Java 版本下需要 `-DextraArgLine=-Dnet.bytebuddy.experimental=true`（見驗證段），**不要用 `-DargLine`**（會覆蓋 pom 的時區設定導致大量測試 error）。
 
-- [ ] 280.20 **修補全部 8 個 `new FullIndicators(...)` 呼叫端**（不補就編譯失敗）：main 的 `TechnicalIndicatorService.java:57`／`:159`／`:496`、`StockAlertTriggerExportService.java:450`；test 的 `StockAlertGroupLabelTest.java:72`／`:89`、`TradingRadarMarketFreshnessTest.java:104`、`export/LiveAssetsDualFormatTest.java:313`。除 `:159`／`:496` 要填真值外，其餘一律填 `ExtendedIndicators.EMPTY`（**不是 `null`**——`EMPTY` 讓下游 `ind.extended().rsi5()` 不必判空）。
+- [x] 280.20 **修補全部 8 個 `new FullIndicators(...)` 呼叫端**（不補就編譯失敗）：main 的 `TechnicalIndicatorService.java:57`／`:159`／`:496`、`StockAlertTriggerExportService.java:450`；test 的 `StockAlertGroupLabelTest.java:72`／`:89`、`TradingRadarMarketFreshnessTest.java:104`、`export/LiveAssetsDualFormatTest.java:313`。除 `:159`／`:496` 要填真值外，其餘一律填 `ExtendedIndicators.EMPTY`（**不是 `null`**——`EMPTY` 讓下游 `ind.extended().rsi5()` 不必判空）。
   掃描指令：`grep -ran "new TechnicalIndicatorService.FullIndicators(\|new FullIndicators(" backend/src`。
-- [ ] 280.21 `TradingRadarSnapshotStoreTest.java:73` 的 `new TradingRadarDto.MarketSummary(...)` 補最後一個引數（傳 `null`，該測試不驗指標）。掃描：`grep -ran "new TradingRadarDto\." backend/src`。
+- [x] 280.21 `TradingRadarSnapshotStoreTest.java:73` 的 `new TradingRadarDto.MarketSummary(...)` 補最後一個引數（傳 `null`，該測試不驗指標）。掃描：`grep -ran "new TradingRadarDto\." backend/src`。
 
-- [ ] 280.22 `backend/src/test/java/com/steven/assets/service/export/TradingRadarDualFormatTest.java`：
+- [x] 280.22 `backend/src/test/java/com/steven/assets/service/export/TradingRadarDualFormatTest.java`：
   - **三組寫死的欄索引全部依 280.24 的映射改掉**（漏任一組都會驗到別的欄位，且對數值格呼叫 `getStringCellValue()` 會擲例外）：
     - `:154-160` 個股決策的 `getCell(33)` **共三處**（`:157`／`:159`／`:160`）→ `getCell(48)`；`:155` 的註解一併改寫，寫明本次插欄的位移規則。
     - `:145` 大盤總覽的 `getCell(18)`（「支持訊號」）→ `getCell(33)`。
@@ -272,7 +272,7 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
     ⚠️ **不可拿「既有的 `MA20` 那格」當對照組**：`snapshotNode()` 的欄名**刻意與 DTO 不同名**——它寫 `m.put("ma20", …)`／`m.put("k", …)`／`m.put("latestPoint", …)`／`s1.put("code", …)`，而匯出端讀的是 `monthlyMa`／`kValue`／`price`／`stockCode`。故 golden 裡多數數值欄其實是 `num()` 回 `null` → **存在但無樣式的 BLANK 格**。要比對照組請用大盤 index 3「分數」（fixture `score` 同名有值）或個股新 index 43「季線乖離%」（fixture `ma60BiasPercent` 同名有值）。
   - 新增：**舊快照相容**——另一組完全不含 `weeklyMa` 與 `extendedIndicators` 的**獨立** fixture（不與 golden 比對），斷言匯出不擲例外、新增 15 欄在 Excel 為 `CellType.BLANK`、在 JSON 為 `null`。
 
-- [ ] 280.23 **golden 基準重產**：
+- [x] 280.23 **golden 基準重產**：
   - 先把現行 `backend/src/test/resources/golden/radar.xlsx`／`radar_empty.xlsx` **複製**為 `radar_pre_t280.xlsx`／`radar_empty_pre_t280.xlsx`（兩個新名與原名都要存在，不是 `git mv`）。
   - **順序不可顛倒：先做 280.22 的 fixture 補欄，再重產 golden。** `snapshotNode()` 是兩條零回歸測試與其他斷言**共用**的同一份 fixture，補了 `weeklyMa`／`extendedIndicators` 之後，重產出的 `radar.xlsx` 新 15 欄會是 **NUMERIC 有值**（不是空白）；空白格的驗證由 280.22 最後那組獨立 fixture 負責。（t271 已踩過同型的坑：「golden fixture 必須與產生器逐字相同——交易雷達的測試一度多加了 `reasons`／`risks` 兩欄而與 golden 對不起來」。）
   - **重產方式（repo 內沒有 golden 產生器，必須自己來）**：暫時在 `TradingRadarDualFormatTest` 加一支拋棄式測試，**store stub 與 `snapshotNode()` 必須與該檔現行的完全同一份**，把 bytes 寫出後刪掉該測試：
@@ -283,18 +283,18 @@ TradingRadarExportService  →  store.range() 取回 JsonNode  →  ExportDoc  �
     （`mvn -f backend/pom.xml` 的 CWD 是 `backend/`，故路徑不含 `backend/` 前綴。`exportForOwner(2L, …)` 對應零快照那條測試既有的 stub。）
   - 重產後既有兩條零回歸測試改對新基準。
 
-- [ ] 280.24 **新增一條測試 `插欄前後既有欄逐格未變`**：對「大盤總覽」以 `old → old < 11 ? old : (old < 18 ? old + 1 : old + 15)`、對「個股決策」以 `old → old < 16 ? old : (old < 24 ? old + 1 : old + 15)` 的映射，逐格比對值、`CellType`、`dataFormat`、粗體、字級；「快照索引」以 identity 映射比對。
+- [x] 280.24 **新增一條測試 `插欄前後既有欄逐格未變`**：對「大盤總覽」以 `old → old < 11 ? old : (old < 18 ? old + 1 : old + 15)`、對「個股決策」以 `old → old < 16 ? old : (old < 24 ? old + 1 : old + 15)` 的映射，逐格比對值、`CellType`、`dataFormat`、粗體、字級；「快照索引」以 identity 映射比對。
   **兩份 pre 基準都要比**：`radar_pre_t280` 比全表；`radar_empty_pre_t280` 比各分頁的表頭列——⚠️ **零快照時「快照索引」是 2 列不是 1 列**（`indexSheet()` 恆先寫一列 `ExportDoc.Line` 提示列，表頭在第 1 列），故該分頁比第 0–1 列，「大盤總覽」「個股決策」比第 0 列即可。
   ⚠️ **只重產 golden 不做這條比對是不夠的**——那樣「新增了欄」與「順手把既有欄改壞」在測試上完全無法分辨，而本次要動的正是三份平行清單的索引。
 
 ### 明確不做的事
 
-- [ ] 280.25 **不動前端**：`TradingRadarView.vue` 不新增欄位、不改展開列（使用者已明確選擇「只進匯出檔」）。雷達表已過寬，且這組值與雙擊開啟的走勢圖 popup 因價基不同必然對不上，同頁並列會造成誤解。
-- [ ] 280.26 **不動走勢圖與其 BFF**：`indicatorSeries()`／`StockAnalysisChartBffController`／`ChartSeriesAligner`／`StockAnalysisDialog.vue` 一律不改。
-- [ ] 280.27 **不動 `RadarInputAssembler`／`BacktestService`／`AlertChartRenderer`**，**不改 `computeAll()` 既有 8 個欄位的對外數值**，**不動 `RULE_VERSION`**。
-- [ ] 280.28 **不新增 `@Scheduled`**，故「公開資訊 → 排程列表」（`SchedulePublicBffController.JOBS`）不新增項目；既有「交易雷達匯出」那一筆的 `description` 只描述觸發時機／產出檔／Drive 同步，本任務只加欄，該段文字改動後仍為真，**不需改寫**。
-- [ ] 280.29 **不動 Liquibase**（零 DB schema 變更；擴充值不入庫，只進 Redis 快照與匯出檔）。
-- [ ] 280.30 **不把任何擴充值接進評分**——那是 t276 的範圍，且 t276 明訂「納入與否一律以 t273 回測框架的量測結果為準」。本任務只負責讓值存在並被匯出。
+- [x] 280.25 **不動前端**：`TradingRadarView.vue` 不新增欄位、不改展開列（使用者已明確選擇「只進匯出檔」）。雷達表已過寬，且這組值與雙擊開啟的走勢圖 popup 因價基不同必然對不上，同頁並列會造成誤解。
+- [x] 280.26 **不動走勢圖與其 BFF**：`indicatorSeries()`／`StockAnalysisChartBffController`／`ChartSeriesAligner`／`StockAnalysisDialog.vue` 一律不改。
+- [x] 280.27 **不動 `RadarInputAssembler`／`BacktestService`／`AlertChartRenderer`**，**不改 `computeAll()` 既有 8 個欄位的對外數值**，**不動 `RULE_VERSION`**。
+- [x] 280.28 **不新增 `@Scheduled`**，故「公開資訊 → 排程列表」（`SchedulePublicBffController.JOBS`）不新增項目；既有「交易雷達匯出」那一筆的 `description` 只描述觸發時機／產出檔／Drive 同步，本任務只加欄，該段文字改動後仍為真，**不需改寫**。
+- [x] 280.29 **不動 Liquibase**（零 DB schema 變更；擴充值不入庫，只進 Redis 快照與匯出檔）。
+- [x] 280.30 **不把任何擴充值接進評分**——那是 t276 的範圍，且 t276 明訂「納入與否一律以 t273 回測框架的量測結果為準」。本任務只負責讓值存在並被匯出。
 
 ## 驗證
 
@@ -407,4 +407,36 @@ docker exec asset-redis redis-cli --bigkeys
 
 ## 完成報告
 
-（實作者做完後回填：實際改了哪些檔、驗證輸出、與原計畫的偏差及原因。）
+### 實際改動
+
+| 檔案 | 內容 |
+|---|---|
+| `backend/.../service/TechnicalIndicatorService.java` | 新增 public `ExtendedIndicators` record（14 值＋`EMPTY`）；`FullIndicators` 加第 9 個 component `extended`；`computeFromSeries` 改**單趟 `kdSeriesAsc`**（current 取尾筆、previous 取倒數第二筆）並呼叫新的 private `extendedOf(asc, kd)`；`computeAllForTaiex` 把已併 live 的 desc 經新的共用 `toRow()` 映射後算擴充值（留在既有 try 內）；`taiexSeriesAsc` 的 inline lambda 改呼叫 `toRow()`；**刪除死碼 `stockKd()`** |
+| `backend/.../dto/TradingRadarDto.java` | 新增 `ExtendedIndicators` record；`MarketSummary`（20→21）與 `StockDecision`（38→39）各加最末欄 `extendedIndicators` |
+| `backend/.../service/TradingRadarService.java` | 新增 private `toDto()`；`buildMarket`／`buildStock` 成功路徑填 `toDto(ind.extended())`，`incompleteMarket`／`incompleteStock` 填 `null`。**`RadarInputAssembler` 與 `prepareTechnicalData` 一行未改** |
+| `backend/.../service/TradingRadarExportService.java` | 新增 `num(parent, child, field)` overload、`EXT_KEYS`／`EXT_HEADERS`／`extCells()`；大盤 20→35 欄、個股 35→50 欄，三份平行清單同步位移，`marketSheet` 的 formats 由單行改為逐行＋index 註解；`:171`／`:178` 的既有 index 註解同步更新 |
+| `backend/.../service/StockAlertTriggerExportService.java` | `new FullIndicators(...)` 補第 9 個引數 `ExtendedIndicators.EMPTY` |
+| `backend/src/test/.../TechnicalIndicatorSeriesAlignmentTest.java` | 新增 9 個 `@Test`（KD 自洽、與 `indicatorSeries` 尾筆逐位相同、單趟合併零回歸、241 視窗收斂、大盤自洽×2、fail-soft、不足序列、**反射釘子**） |
+| `backend/src/test/.../export/TradingRadarDualFormatTest.java` | 三組寫死欄索引改掉（33→48 三處、18→33、14→15 兩處）；fixture 補 `weeklyMa`／`extendedIndicators`；新增 5 個 `@Test`（表頭逐字、新欄值與格式、舊快照相容、插欄前後逐格未變、**匯出欄名與 DTO 元件名綁定**） |
+| `backend/src/test/.../{StockAlertGroupLabelTest,TradingRadarMarketFreshnessTest,TradingRadarSnapshotStoreTest,export/LiveAssetsDualFormatTest}.java` | positional constructor 補引數 |
+| `backend/src/test/resources/golden/radar{,_empty}.xlsx` | 重產（新 15 欄為 NUMERIC 有值） |
+| `backend/src/test/resources/golden/radar{,_empty}_pre_t280.xlsx` | 新增，改動前基準，供欄索引映射比對 |
+
+### 驗證輸出
+
+- `mvn -f backend/pom.xml test -DextraArgLine=-Dnet.bytebuddy.experimental=true`：**Tests run: 520, Failures: 0, Errors: 0 — BUILD SUCCESS**（改動前 498，新增 22 條）。
+- `spec-check.sh`：BLOCK 0 / CHECK 0。
+- 對抗式 spec 審查 **5 輪**（2 critical／11 major／16 minor 全數處理；第 4 輪後因 main 推進與 t276 衝突而換設計，重審）。
+- `arch-auditor`：critical 0／major 0／minor 1（javadoc 死鏈與孤兒區塊，已修）。另採納其兩項非 finding 建議：`git add` 兩份 pre golden、新增「匯出欄名 ↔ DTO 元件名」反射綁定測試。
+
+### 與原計畫的偏差
+
+1. **編號由 273 避讓為 280**：審查期間 main 被其他 worktree 推進，Task 273–279 已占用。
+2. **設計整個換過（第 4 輪後）**：原設計新增 `latestFromSeries()` ＋ `computeTaiexWithExtended()`／`TaiexIndicators`。merge main 後發現 (a) Task 273 把 `prepareTechnicalData` 抽成 `RadarInputAssembler`，原設計依附的 `TechnicalData` record 與 `window` 變數已不存在；(b) main 上的 t276（未實作）的 276.1 已規劃「擴充 `FullIndicators` 的輸出」，原設計會變成兩份同義輸出。改為擴充 `FullIndicators`，反而更小——`RadarInputAssembler` 與 `buildMarket` 的 `computeAll` 呼叫都不必改。
+3. **順帶合併 `kdSeriesAsc` 為單趟（原計畫沒有）**：第 4 輪審查指出 `computeFromSeries` 的最大宗呼叫端是 `BacktestService`（每檔每日一次，端點自述分鐘級），而原本已跑兩趟 KD、再加一趟會明顯變慢。因 `kdSeriesAsc` 是前綴相依前向遞迴，previous 取倒數第二筆與舊版 bit-identical，故合併為單趟：3 趟降 1 趟，抵銷新增的 MACD／RSI／BIAS。`stockKd()` 因此成為死碼並刪除。
+4. **反射釘子的禁用字串改為精確欄名**：初版用 `bias` 當字根，誤中 Task 264 既有且合法的 `ma60BiasPercent`／`ma240BiasPercent`（那是「現價對季／年線的乖離」，與 BIAS10／BIAS20 是不同的東西），測試當場紅燈。改為 14 個精確欄名＋`extended`。
+5. **新增一條原計畫沒有的測試**（arch-auditor 建議）：`EXT_KEYS` 與 `TradingRadarDto.ExtendedIndicators` 的 record 元件名之間原本沒有任何編譯期或測試期綁定——改了 DTO 欄名，匯出會靜默變成 14 個空白格而全測試皆綠。
+
+### 尚未執行
+
+- **部署與實機驗證**（驗證段第 2–8 步）：image rebuild ＋ container recreate、端點自測、匯出檔實測、舊快照相容、觀察清單零回歸、**回測端點 wall time 倍率**、**Redis `--bigkeys` 體積對照**——待使用者指示。依共用 stack 規則，merge 進 main 後應從 main 的 worktree 重建。
